[BACKLOG-43874]-Fix JDK21 test pipeline(test1) build failures

--- a/user-console/pom.xml
+++ b/user-console/pom.xml
@@ -415,9 +415,9 @@
               <goal>run</goal>
             </goals>
             <configuration>
-              <tasks>
+              <target>
                 <copy file="${project.basedir}/../LICENSE.TXT" tofile="${project.build.directory}/classes/org/pentaho/mantle/public/LICENSE.TXT"/>
-              </tasks>
+              </target>
             </configuration>
           </execution>
         </executions>
